fix: implement dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: rgba(210, 218, 226, 1.0);
-  --foreground: #171717;
+  --background: var(--color-elusive-100);
+  --foreground: var(--color-earl-500);
 }
 
 @theme {
@@ -71,7 +71,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: var(--color-earl-500);
+    --background: var(--color-earl-400);
     --foreground: var(--color-elusive-100);
   }
 }
